Fix: 툴박스 z-index 상단 띄움

--- a/src/components/styles/ToolTipBox.scss
+++ b/src/components/styles/ToolTipBox.scss
@@ -20,8 +20,9 @@
     position: absolute;
     background: #fff;
     width: 220px;
-    box-shadow: 3px 3px 8px 0 rgb(0 0 0 / 20%);
+    box-shadow: 3px 3px 8px 0 rgba(44, 42, 42, 0.2);
     border-radius: 7px;
+    z-index: 1;
   }
 
   .tool-tip-box1 {
